# HireX

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_AZURE.md  DEPLOYMENT_OPTIMIZATION.md  DEPLOYMENT_PRIVATE_REPO.md  DEPLOYMENT_QA.md  README.md  USER_GUIDE.md  deploy_to_azure.ps1  migrate_data_to_azure.ps1  package-lock.json  package.json  prepare_deployment.py  pyproject.toml  render.yaml  requirements.txt  start.py  task.md  trained_agents_data.pkl  training_data.pkl  upload_to_r2.py  verify_deployment_ready.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  project_report_instructions.md
backend/: main.py  requirements.txt
backend/core/: config.py
backend/services/: chat_service.py
frontend/: index.html  package-lock.json
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
manual_deploy_temp/: requirements.txt
manual_deploy_temp/backend/: main.py
manual_deploy_temp/backend/api/: routes.py
manual_deploy_temp/backend/core/: config.py
manual_deploy_temp/backend/services/: chat_service.py  storage_service.py
manual_deploy_temp/frontend/: package.json
manual_deploy_temp/frontend/src/: App.tsx  index.css
manual_deploy_temp/src/resume_screening_rag_automation/: main.py  models.py  paths.py  state.py
manual_deploy_temp/src/resume_screening_rag_automation.egg-info/: PKG-INFO  top_level.txt
manual_deploy_temp/training/query_manager/: README.md  training_data.json
src/knowledge_store/conversations/: sessions_index.json
src/knowledge_store/cv_txt/: AbhiramResume.txt  AchuthaHMResume.txt  AdamResume.txt  AdarshResume.txt  AdrianResume.txt  AlokeshMisraResume.txt  AmalSResume.txt  AnanthaGowthamBResume (1).txt  AndrewResume.txt  AngelResume.txt  AnisResume.txt  AnthonyResume.txt  ArtursResume.txt  ArunKumarResume.txt  AzhaguChokkaiahResume.txt  BAwadheshKumarBResume.txt  BDhandayuthapaniBResume.txt  (+193 more)
src/resume_screening_rag_automation/: __init__.py  app.py  cli.py  main.py  paths.py  run_resume_pipeline_check.py  session_memory.py  storage_sync.py
src/resume_screening_rag_automation.egg-info/: SOURCES.txt  requires.txt
training/query_manager/: run_training.py  scenarios.jsonl  trained_query_manager.pkl
(+281 files in other folders)
