[project]
name = "resume_screening_rag_automation"
version = "0.1.0"
description = "Resume Screening Chat Assistant Using CrewAI"
authors = [{ name = "Piyal Dey & Camilla Louise Jensen" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai",
    "crewai[tools]",
    "streamlit",
    "chromadb",
    "python-dotenv",
    "PyYAML",
    "numpy",
    "supabase",
    "tiktoken",
]

[project.scripts]
resume_screening_app = "resume_screening_rag_automation.app:run_streamlit_app"
resume_screening_cli = "resume_screening_rag_automation.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
